--- a/10.Links Relativos X Absolutos/index.html
+++ b/10.Links Relativos X Absolutos/index.html
@@ -5,17 +5,17 @@
     <body>
         <h1 align="center">Links Relativos X Absolutos</h1>
         <ul>
-        <li><b>Arquivo</b></br>
-        <a href="colocar aqui o link">Link relativo no mesmo diretório</a>
+        <li><b>Aula-02-Aux01.html</b></br>
+        <a href="Aula-02-Aux01.html">Link relativo no mesmo diretório</a>
         </li>
-        <li><b>Arquivo</b></br>
-        <a href="colocar aqui o link">Link relativo em subdiretório</a>
+        <li><b>imagem.Aula02.Aux02.html</b></br>
+        <a href="imagem.Aula02.Aux02.html">Link relativo em subdiretório</a>
         </li>
         <li><b>Disney Plus</b></br>
         <a href="https://www.disneyplus.com/pt-br/identity/login?pinned=true">Link Absoluto</a>
         </li>
-        <li><b>Aula-02-11.Documento com várias seções#direita</b></br>
-        <a href="colocar o link aqui">Link relativo para o exemplo de seções</a> 
+        <li><b>Aula-02-11.html#direita</b></br>
+        <a href="Aula-02-11.html#direita">Link relativo para o exemplo de seções</a> 
         </li>
         </ul>
     </body>
